- Make sure HTMLPart uses proper charset when rendering page
- Add copy URL item to popupmenu in search plugin view
- Pause becomes suspend
- Revamp torrent creation code
- Avoid unnecessary memcpy when generating hash
- Add UDP tracker scraping
- Improve handling of incomplete handshakes (218875)
- When switching back from fullscreen video make sure the tab shown is the video tab

Changes in 4.0beta1:
- Make adding multiple trackers at once possible (213194) 
- Bandwidth scheduler can now be deactivated temporarely
- Show information message instead of error when trackerlists are merged (213772)
- Add patch from Leo Trubach which adds support for IP rangs to the IP filter dialog
- Add support for metadata extension
- Remove own flags, now using exclusively those from KDE 
- Add support for reqq parameter in extended handshake
- Ignore diskspace check when it cannot be determined on a gvfs mounted filesystem (187141)
- DHT can no longer be disabled at compile time
- Add support for magnet URL's (214375)
- Fix crash due to uncaught warning 
- Expand open url dialog, it is now possible to open silently and to select the group
- Fix crash when loading magnets file (218227)

Changes in 3.3.3:
- Fix crash caused by 0 pointer in Downloader::saveDownloads (219019)
- Don't remove torrent when jobs are running, wait until they are done, this fixes a crash (218853)
- Disable editing of items in ActivityListModel (219355)
- Make sure checks for ftello and fseeko are done, fixes a problem with large file sizes on BSD (217523)
- Make sure reannounce timer in UDPTracker is always stopped in the stop call (219663)
- Fix broken FilterListModel::removeFilter fixes a crash (219760)
- Revamp adding trackers to TrackerListModel, should fix a crash (218738)
- Don't allow nested event loops when iterating over the incomplete url list in scanfolder plugin, fixes a crash (219885)

Changes in 3.3.2:
- Fix crash when loading Feed in syndication plugin at startup (216207)